清理codecheck